<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtNickname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/moon"
                    android:hint="@string/nickname"
                    android:inputType="textPersonName"
                    android:textColor="@color/moon"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="130dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/subColor"
                        android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/moon"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:textColor="@color/moon"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintTop_toBottomOf="@id/edtNickname"
                    android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/subColor"
                        android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/moon"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:textColor="@color/moon"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword"
                    android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/subColor"
                        android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:text="@string/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSignUp"
                    android:layout_marginBottom="9dp"
                    app:layout_constraintBottom_toTopOf="@+id/edtNickname"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/mainColor"
                    style="@style/BaseText" />

            <android.widget.Button
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    android:text="인증메일 보내기"
                    android:background="@color/subColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
